# GameHackingEngine

./: .gitignore  CMakeLists.txt  GameHackingEngine.sln  GameHackingEngine.vcxproj  GameHackingEngine.vcxproj.filters  README.md  main.cpp
include/core/: Address.h  DllInjector.h  Game.h  Injector.h  Pointer.h  Process.h  Program.h  WinCodeCave.h  WinGame.h  WinMemoryManager.h  WinProcess.h
include/helper/: Helper.h
source/core/: Address.cpp  Game.cpp  Process.cpp  Program.cpp  WInGame.cpp  WinProcess.cpp
tests/: CMakeLists.txt
tests/include/GameHackingEngineTests/: TestsGame.h
tests/include/catch/: catch.hpp
tests/source/: AllTests.cpp
